syntax = "proto3";

package user;

service UserService {
  rpc GetUserByEmail (UserRequest) returns (User);
}

message User {
  int32 id = 1;
  string email = 2;
  string status = 3;
  string createdDate = 4;
  string updatedDate = 5;
}

message UserRequest {
  string email = 1;
}
